--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "logic game at fifteen",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp dev",
+    "build": "NODE_ENV=production gulp build",
+    "clean": "gulp clean",
+    "server": "gulp server"
   },
   "keywords": [
     "javascript",
@@ -17,13 +20,19 @@
   "author": "makarovskyi.v@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "delete": "^1.1.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
+    "gulp-data": "^1.3.1",
+    "gulp-if": "^3.0.0",
     "gulp-imagemin": "^8.0.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-sass": "^5.1.0",
+    "gulp-svg-sprite": "^2.0.3",
     "gulp-uglify": "^3.0.2",
+    "pug": "^3.0.2",
     "sass": "^1.62.1"
   }
 }
